# pudding

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: containers.yml  general.yml
src/: main.rs
src/handlers/files/: mod.rs
src/models/: mod.rs
src/models/responses/: mod.rs
src/models/results/: mod.rs
src/models/state/: mod.rs
src/models/streams/: mod.rs
