[package]
name = "pudding"
version = "0.1.0"
authors = ["Aaron Marshall <hi@imaaronnicetomeetyou.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.5"
dotenv = "0.15.0"
itertools = "0.9.0"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"]}
rocket_contrib = { version = "0.4.4", default-features = false, features = ["json"] }
uuid = { version = "0.8", features = ["v4"]}
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
rusoto_credential = "0.44.0"
